stc/pkg/parser/smalltalk_parser.go
// Code generated from /home/denis/Documents/iu7-project-compilers/stc/SmallTalk.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // SmallTalk

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'+'", "'-'", "'*'", "'/'", "'nil'", "'true'", "'false'", "'class'",
	"'self'", "'super'", "", "", "'.'", "'|'", "':'", "';'", "':='", "'['",
	"']'", "'('", "')'", "'{'", "'}'", "", "", "'2r'", "'8r'", "'16r'",
}
var symbolicNames = []string{
	"", "", "", "", "", "NIL", "TRUE", "FALSE", "CLASS", "SELF", "SUPER", "COMMENT",
	"WHITESPACE", "DOT", "PIPE", "COLON", "SEMICOLON", "ASSIGNMENT", "LEFT_BRK",
	"RIGHT_BRK", "LEFT_PRT", "RIGHT_PRT", "LEFT_BRC", "RIGHT_BRC", "IDENTIFIER",
	"KEYWORD", "BIN", "OCT", "HEX", "BIN_INT_NUMBER", "OCT_INT_NUMBER", "DEC_INT_NUMBER",
	"HEX_INT_NUMBER", "FLOAT_NUMBER", "CHAR", "STRING",
}

var ruleNames = []string{
	"script", "classDef", "main", "instanceMethods", "method", "unaryMethod",
	"binaryMethod", "keywordMethod", "methodArgs", "methodArg", "localVars",
	"localVar", "body", "statements", "statement", "assignmentStatement", "assignmentItem",
	"messageStatement", "messageExpression", "message", "messageRange", "unaryMessage",
	"binaryMessage", "keywordMessage", "keywordMessageArgs", "messageArg",
	"prtStatement", "value", "valueVar", "valueSelf", "valueSuper", "valueBlock",
	"blockArgs", "blockArg", "valueConst", "valueConstNum", "valueConstBinInt",
	"valueConstOctInt", "valueConstDecInt", "valueConstHexInt", "valueConstFloat",
	"valueConstChar", "valueConstString", "valueConstBool", "valueNil", "identifier",
	"operator",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SmallTalkParser struct {
	*antlr.BaseParser
}

func NewSmallTalkParser(input antlr.TokenStream) *SmallTalkParser {
	this := new(SmallTalkParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SmallTalk.g4"

	return this
}

// SmallTalkParser tokens.
const (
	SmallTalkParserEOF            = antlr.TokenEOF
	SmallTalkParserT__0           = 1
	SmallTalkParserT__1           = 2
	SmallTalkParserT__2           = 3
	SmallTalkParserT__3           = 4
	SmallTalkParserNIL            = 5
	SmallTalkParserTRUE           = 6
	SmallTalkParserFALSE          = 7
	SmallTalkParserCLASS          = 8
	SmallTalkParserSELF           = 9
	SmallTalkParserSUPER          = 10
	SmallTalkParserCOMMENT        = 11
	SmallTalkParserWHITESPACE     = 12
	SmallTalkParserDOT            = 13
	SmallTalkParserPIPE           = 14
	SmallTalkParserCOLON          = 15
	SmallTalkParserSEMICOLON      = 16
	SmallTalkParserASSIGNMENT     = 17
	SmallTalkParserLEFT_BRK       = 18
	SmallTalkParserRIGHT_BRK      = 19
	SmallTalkParserLEFT_PRT       = 20
	SmallTalkParserRIGHT_PRT      = 21
	SmallTalkParserLEFT_BRC       = 22
	SmallTalkParserRIGHT_BRC      = 23
	SmallTalkParserIDENTIFIER     = 24
	SmallTalkParserKEYWORD        = 25
	SmallTalkParserBIN            = 26
	SmallTalkParserOCT            = 27
	SmallTalkParserHEX            = 28
	SmallTalkParserBIN_INT_NUMBER = 29
	SmallTalkParserOCT_INT_NUMBER = 30
	SmallTalkParserDEC_INT_NUMBER = 31
	SmallTalkParserHEX_INT_NUMBER = 32
	SmallTalkParserFLOAT_NUMBER   = 33
	SmallTalkParserCHAR           = 34
	SmallTalkParserSTRING         = 35
)

// SmallTalkParser rules.
const (
	SmallTalkParserRULE_script              = 0
	SmallTalkParserRULE_classDef            = 1
	SmallTalkParserRULE_main                = 2
	SmallTalkParserRULE_instanceMethods     = 3
	SmallTalkParserRULE_method              = 4
	SmallTalkParserRULE_unaryMethod         = 5
	SmallTalkParserRULE_binaryMethod        = 6
	SmallTalkParserRULE_keywordMethod       = 7
	SmallTalkParserRULE_methodArgs          = 8
	SmallTalkParserRULE_methodArg           = 9
	SmallTalkParserRULE_localVars           = 10
	SmallTalkParserRULE_localVar            = 11
	SmallTalkParserRULE_body                = 12
	SmallTalkParserRULE_statements          = 13
	SmallTalkParserRULE_statement           = 14
	SmallTalkParserRULE_assignmentStatement = 15
	SmallTalkParserRULE_assignmentItem      = 16
	SmallTalkParserRULE_messageStatement    = 17
	SmallTalkParserRULE_messageExpression   = 18
	SmallTalkParserRULE_message             = 19
	SmallTalkParserRULE_messageRange        = 20
	SmallTalkParserRULE_unaryMessage        = 21
	SmallTalkParserRULE_binaryMessage       = 22
	SmallTalkParserRULE_keywordMessage      = 23
	SmallTalkParserRULE_keywordMessageArgs  = 24
	SmallTalkParserRULE_messageArg          = 25
	SmallTalkParserRULE_prtStatement        = 26
	SmallTalkParserRULE_value               = 27
	SmallTalkParserRULE_valueVar            = 28
	SmallTalkParserRULE_valueSelf           = 29
	SmallTalkParserRULE_valueSuper          = 30
	SmallTalkParserRULE_valueBlock          = 31
	SmallTalkParserRULE_blockArgs           = 32
	SmallTalkParserRULE_blockArg            = 33
	SmallTalkParserRULE_valueConst          = 34
	SmallTalkParserRULE_valueConstNum       = 35
	SmallTalkParserRULE_valueConstBinInt    = 36
	SmallTalkParserRULE_valueConstOctInt    = 37
	SmallTalkParserRULE_valueConstDecInt    = 38
	SmallTalkParserRULE_valueConstHexInt    = 39
	SmallTalkParserRULE_valueConstFloat     = 40
	SmallTalkParserRULE_valueConstChar      = 41
	SmallTalkParserRULE_valueConstString    = 42
	SmallTalkParserRULE_valueConstBool      = 43
	SmallTalkParserRULE_valueNil            = 44
	SmallTalkParserRULE_identifier          = 45
	SmallTalkParserRULE_operator            = 46
)

// IScriptContext is an interface to support dynamic dispatch.
type IScriptContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsScriptContext differentiates from other interfaces.
	IsScriptContext()
}

type ScriptContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyScriptContext() *ScriptContext {
	var p = new(ScriptContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SmallTalkParserRULE_script
	return p
}

func (*ScriptContext) IsScriptContext() {}

func NewScriptContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ScriptContext {
	var p = new(ScriptContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SmallTalkParserRULE_script

	return p
}

func (s *ScriptContext) GetParser() antlr.Parser { return s.parser }

func (s *ScriptContext) Main() IMainContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMainContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMainContext)
}

func (s *ScriptContext) EOF() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserEOF, 0)
}

func (s *ScriptContext) AllClassDef() []IClassDefContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClassDefContext)(nil)).Elem())
	var tst = make([]IClassDefContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClassDefContext)
		}
	}

	return tst
}

func (s *ScriptContext) ClassDef(i int) IClassDefContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassDefContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClassDefContext)
}

func (s *ScriptContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ScriptContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ScriptContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.EnterScript(s)
	}
}

func (s *ScriptContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.ExitScript(s)
	}
}

func (p *SmallTalkParser) Script() (localctx IScriptContext) {
	localctx = NewScriptContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SmallTalkParserRULE_script)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SmallTalkParserCLASS {
		{
			p.SetState(94)
			p.ClassDef()
		}

		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(100)
		p.Main()
	}
	{
		p.SetState(101)
		p.Match(SmallTalkParserEOF)
	}

	return localctx
}

// IClassDefContext is an interface to support dynamic dispatch.
type IClassDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// GetSup returns the sup token.
	GetSup() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// SetSup sets the sup token.
	SetSup(antlr.Token)

	// IsClassDefContext differentiates from other interfaces.
	IsClassDefContext()
}

type ClassDefContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
	sup    antlr.Token
}

func NewEmptyClassDefContext() *ClassDefContext {
	var p = new(ClassDefContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SmallTalkParserRULE_classDef
	return p
}

func (*ClassDefContext) IsClassDefContext() {}

func NewClassDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassDefContext {
	var p = new(ClassDefContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SmallTalkParserRULE_classDef

	return p
}

func (s *ClassDefContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassDefContext) GetName() antlr.Token { return s.name }

func (s *ClassDefContext) GetSup() antlr.Token { return s.sup }

func (s *ClassDefContext) SetName(v antlr.Token) { s.name = v }

func (s *ClassDefContext) SetSup(v antlr.Token) { s.sup = v }

func (s *ClassDefContext) CLASS() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserCLASS, 0)
}

func (s *ClassDefContext) LEFT_BRK() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserLEFT_BRK, 0)
}

func (s *ClassDefContext) RIGHT_BRK() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserRIGHT_BRK, 0)
}

func (s *ClassDefContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(SmallTalkParserIDENTIFIER)
}

func (s *ClassDefContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(SmallTalkParserIDENTIFIER, i)
}

func (s *ClassDefContext) COLON() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserCOLON, 0)
}

func (s *ClassDefContext) InstanceMethods() IInstanceMethodsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInstanceMethodsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInstanceMethodsContext)
}

func (s *ClassDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.EnterClassDef(s)
	}
}

func (s *ClassDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.ExitClassDef(s)
	}
}

func (p *SmallTalkParser) ClassDef() (localctx IClassDefContext) {
	localctx = NewClassDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SmallTalkParserRULE_classDef)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(103)
		p.Match(SmallTalkParserCLASS)
	}
	{
		p.SetState(104)

		var _m = p.Match(SmallTalkParserIDENTIFIER)

		localctx.(*ClassDefContext).name = _m
	}
	p.SetState(107)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SmallTalkParserCOLON {
		{
			p.SetState(105)
			p.Match(SmallTalkParserCOLON)
		}
		{
			p.SetState(106)

			var _m = p.Match(SmallTalkParserIDENTIFIER)

			localctx.(*ClassDefContext).sup = _m
		}

	}
	{
		p.SetState(109)
		p.Match(SmallTalkParserLEFT_BRK)
	}
	p.SetState(111)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SmallTalkParserIDENTIFIER || _la == SmallTalkParserKEYWORD {
		{
			p.SetState(110)
			p.InstanceMethods()
		}

	}
	{
		p.SetState(113)
		p.Match(SmallTalkParserRIGHT_BRK)
	}

	return localctx
}

// IMainContext is an interface to support dynamic dispatch.
type IMainContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMainContext differentiates from other interfaces.
	IsMainContext()
}

type MainContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainContext() *MainContext {
	var p = new(MainContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SmallTalkParserRULE_main
	return p
}

func (*MainContext) IsMainContext() {}

func NewMainContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainContext {
	var p = new(MainContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SmallTalkParserRULE_main

	return p
}

func (s *MainContext) GetParser() antlr.Parser { return s.parser }

func (s *MainContext) Body() IBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *MainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.EnterMain(s)
	}
}

func (s *MainContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.ExitMain(s)
	}
}

func (p *SmallTalkParser) Main() (localctx IMainContext) {
	localctx = NewMainContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SmallTalkParserRULE_main)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(115)
		p.Body()
	}

	return localctx
}

// IInstanceMethodsContext is an interface to support dynamic dispatch.
type IInstanceMethodsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInstanceMethodsContext differentiates from other interfaces.
	IsInstanceMethodsContext()
}

type InstanceMethodsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstanceMethodsContext() *InstanceMethodsContext {
	var p = new(InstanceMethodsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SmallTalkParserRULE_instanceMethods
	return p
}

func (*InstanceMethodsContext) IsInstanceMethodsContext() {}

func NewInstanceMethodsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstanceMethodsContext {
	var p = new(InstanceMethodsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SmallTalkParserRULE_instanceMethods

	return p
}

func (s *InstanceMethodsContext) GetParser() antlr.Parser { return s.parser }

func (s *InstanceMethodsContext) AllMethod() []IMethodContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMethodContext)(nil)).Elem())
	var tst = make([]IMethodContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMethodContext)
		}
	}

	return tst
}

func (s *InstanceMethodsContext) Method(i int) IMethodContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMethodContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMethodContext)
}

func (s *InstanceMethodsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstanceMethodsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstanceMethodsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.EnterInstanceMethods(s)
	}
}

func (s *InstanceMethodsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.ExitInstanceMethods(s)
	}
}

func (p *SmallTalkParser) InstanceMethods() (localctx IInstanceMethodsContext) {
	localctx = NewInstanceMethodsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SmallTalkParserRULE_instanceMethods)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(118)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == SmallTalkParserIDENTIFIER || _la == SmallTalkParserKEYWORD {
		{
			p.SetState(117)
			p.Method()
		}

		p.SetState(120)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IMethodContext is an interface to support dynamic dispatch.
type IMethodContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMethodContext differentiates from other interfaces.
	IsMethodContext()
}

type MethodContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMethodContext() *MethodContext {
	var p = new(MethodContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SmallTalkParserRULE_method
	return p
}

func (*MethodContext) IsMethodContext() {}

func NewMethodContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MethodContext {
	var p = new(MethodContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SmallTalkParserRULE_method

	return p
}

func (s *MethodContext) GetParser() antlr.Parser { return s.parser }

func (s *MethodContext) UnaryMethod() IUnaryMethodContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnaryMethodContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnaryMethodContext)
}

func (s *MethodContext) BinaryMethod() IBinaryMethodContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBinaryMethodContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBinaryMethodContext)
}

func (s *MethodContext) KeywordMethod() IKeywordMethodContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IKeywordMethodContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IKeywordMethodContext)
}

func (s *MethodContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MethodContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MethodContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.EnterMethod(s)
	}
}

func (s *MethodContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.ExitMethod(s)
	}
}

func (p *SmallTalkParser) Method() (localctx IMethodContext) {
	localctx = NewMethodContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SmallTalkParserRULE_method)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(125)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(122)
			p.UnaryMethod()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(123)
			p.BinaryMethod()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(124)
			p.KeywordMethod()
		}

	}

	return localctx
}

// IUnaryMethodContext is an interface to support dynamic dispatch.
type IUnaryMethodContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name token.
	GetName() antlr.Token

	// SetName sets the name token.
	SetName(antlr.Token)

	// IsUnaryMethodContext differentiates from other interfaces.
	IsUnaryMethodContext()
}

type UnaryMethodContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	name   antlr.Token
}

func NewEmptyUnaryMethodContext() *UnaryMethodContext {
	var p = new(UnaryMethodContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SmallTalkParserRULE_unaryMethod
	return p
}

func (*UnaryMethodContext) IsUnaryMethodContext() {}

func NewUnaryMethodContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnaryMethodContext {
	var p = new(UnaryMethodContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SmallTalkParserRULE_unaryMethod

	return p
}

func (s *UnaryMethodContext) GetParser() antlr.Parser { return s.parser }

func (s *UnaryMethodContext) GetName() antlr.Token { return s.name }

func (s *UnaryMethodContext) SetName(v antlr.Token) { s.name = v }

func (s *UnaryMethodContext) LEFT_BRK() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserLEFT_BRK, 0)
}

func (s *UnaryMethodContext) Body() IBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *UnaryMethodContext) RIGHT_BRK() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserRIGHT_BRK, 0)
}

func (s *UnaryMethodContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SmallTalkParserIDENTIFIER, 0)
}

func (s *UnaryMethodContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnaryMethodContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnaryMethodContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.EnterUnaryMethod(s)
	}
}

func (s *UnaryMethodContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SmallTalkListener); ok {
		listenerT.ExitUnaryMethod(s)
	}
}

func (p *SmallTalkParser) UnaryMethod() (localctx IUnaryMethodContext) {
	localctx = NewUnaryMethodContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SmallTalkParserRULE_unaryMethod)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()
